[gd_scene load_steps=36 format=3 uid="uid://dwxwhde647821"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_e00tr"]
[ext_resource type="Texture2D" uid="uid://d3jqv5bw3d37s" path="res://assets/img/level/line;.png" id="2_m0j1p"]
[ext_resource type="Script" path="res://scripts/stopGame.gd" id="2_w6n62"]
[ext_resource type="Texture2D" uid="uid://dqurtwbekx84b" path="res://assets/img/level/lineA.png" id="3_ajp00"]
[ext_resource type="Texture2D" uid="uid://bapxe0m1jmqt7" path="res://assets/img/level/lineD.png" id="4_amgvv"]
[ext_resource type="Texture2D" uid="uid://r3qyx3qvodjl" path="res://assets/img/level/lineF.png" id="5_wjh4k"]
[ext_resource type="AudioStream" uid="uid://c2xcng218gkw2" path="res://assets/music/failed.ogg" id="6_el2xh"]
[ext_resource type="Texture2D" uid="uid://bs5in14xv8mvu" path="res://assets/img/level/lineJ.png" id="6_u2av3"]
[ext_resource type="AudioStream" uid="uid://ipf48cojq1hi" path="res://assets/music/success.ogg" id="7_4texb"]
[ext_resource type="Texture2D" uid="uid://c8xrukkjgcpon" path="res://assets/img/level/lineK.png" id="7_sawos"]
[ext_resource type="AudioStream" uid="uid://0wqk6wv5qn45" path="res://assets/music/hitBack.ogg" id="8_3mbfd"]
[ext_resource type="Texture2D" uid="uid://dvyx1563wvb2m" path="res://assets/img/level/lineL.png" id="8_b4u7i"]
[ext_resource type="Texture2D" uid="uid://cjk5xxcjjp3ci" path="res://assets/img/level/lineS.png" id="9_m613o"]
[ext_resource type="Texture2D" uid="uid://qpl37f283uqh" path="res://assets/img/level/lifeBar_back.png" id="10_3c7or"]
[ext_resource type="Texture2D" uid="uid://tjseqnwo2tsp" path="res://assets/img/level/lifeBar_over.png" id="11_gad20"]
[ext_resource type="Texture2D" uid="uid://d11kar16me7gg" path="res://assets/img/level/lifeBar_progress.png" id="12_fdv8e"]
[ext_resource type="Texture2D" uid="uid://ddxem1x50xgsa" path="res://assets/img/main/info.png" id="14_7rxwv"]
[ext_resource type="AudioStream" uid="uid://rxaxvroytnf7" path="res://assets/music/readyToGo.ogg" id="18_q2gtr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xrtli"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ur752"]

[sub_resource type="Animation" id="Animation_wngs0"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit1:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0.980392, 0.392157, 0.196078, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="Animation" id="Animation_a3t4g"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0.980392, 0.470588, 0, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="Animation" id="Animation_jdcqb"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit3:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0.784314, 0.588235, 0, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="Animation" id="Animation_v6jo5"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit4:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0.470588, 0.784314, 0, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="Animation" id="Animation_n8gbh"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit5:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0, 0.784314, 0.784314, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="Animation" id="Animation_guf3q"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit6:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0, 0.666667, 0.980392, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="Animation" id="Animation_go28j"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit7:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0.470588, 0.588235, 0.980392, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="Animation" id="Animation_ravu4"]
resource_name = "hit2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit8:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.980392, 0), Color(0.588235, 0.588235, 0.980392, 0.392157), Color(0.588235, 0.588235, 0.980392, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2w5i"]
_data = {
"hit1": SubResource("Animation_wngs0"),
"hit2": SubResource("Animation_a3t4g"),
"hit3": SubResource("Animation_jdcqb"),
"hit4": SubResource("Animation_v6jo5"),
"hit5": SubResource("Animation_n8gbh"),
"hit6": SubResource("Animation_guf3q"),
"hit7": SubResource("Animation_go28j"),
"hit8": SubResource("Animation_ravu4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j40s7"]
size = Vector2(1312, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pjan"]
size = Vector2(1344, 16)

[sub_resource type="Animation" id="Animation_ntk63"]
resource_name = "intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1024, 64), Vector2(0, 64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("countdown:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 0.839216, 0, 1), Color(0, 0.666667, 1, 1), Color(1, 0.521569, 0.521569, 1), Color(1, 0.521569, 0.521569, 1), Color(1, 0.521569, 0.521569, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.666667, 1, 1), Color(0, 0.666667, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8034l"]
_data = {
"intro": SubResource("Animation_ntk63")
}

[sub_resource type="Animation" id="Animation_fnrei"]
resource_name = "backToMain"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("back:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1280, 0), Vector2(1280, 720)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("back:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ev46n"]
_data = {
"backToMain": SubResource("Animation_fnrei")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_e00tr")

[node name="music" type="AudioStreamPlayer" parent="."]

[node name="endGame" type="ColorRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="result" type="Label" parent="endGame"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "结果"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gameScore" type="Label" parent="endGame"]
layout_mode = 0
offset_left = 128.0
offset_top = 192.0
offset_right = 228.0
offset_bottom = 261.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "分数"

[node name="missNote" type="Label" parent="endGame"]
layout_mode = 0
offset_left = 128.0
offset_top = 261.0
offset_right = 228.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "漏音"

[node name="difficulty" type="Label" parent="endGame"]
layout_mode = 0
offset_left = 128.0
offset_top = 330.0
offset_right = 228.0
offset_bottom = 399.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "模式"

[node name="background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="videoBackground" type="VideoStreamPlayer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
volume_db = -80.0
expand = true

[node name="decoration" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 384)
sprite_frames = SubResource("SpriteFrames_xrtli")

[node name="role" type="AnimatedSprite2D" parent="."]
position = Vector2(1024, 448)
sprite_frames = SubResource("SpriteFrames_ur752")
autoplay = "default"

[node name="line" type="Area2D" parent="."]

[node name="theLine" type="ColorRect" parent="line"]
offset_left = -32.0
offset_top = 624.0
offset_right = 1312.0
offset_bottom = 656.0
color = Color(1, 0.764706, 1, 0)

[node name="theLineAnimation" type="AnimationPlayer" parent="line/theLine"]
libraries = {
"": SubResource("AnimationLibrary_o2w5i")
}

[node name="hit1" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 160.0
offset_top = -688.0
offset_right = 288.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="hit2" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 288.0
offset_top = -688.0
offset_right = 416.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="hit3" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 416.0
offset_top = -688.0
offset_right = 544.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="hit4" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 544.0
offset_top = -688.0
offset_right = 672.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="hit5" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 672.0
offset_top = -688.0
offset_right = 800.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="hit6" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 800.0
offset_top = -688.0
offset_right = 928.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="hit7" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 928.0
offset_top = -688.0
offset_right = 1056.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="hit8" type="ColorRect" parent="line/theLine"]
layout_mode = 0
offset_left = 1056.0
offset_top = -688.0
offset_right = 1184.0
offset_bottom = 144.0
color = Color(0.588235, 0.588235, 0.980392, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="line"]
position = Vector2(640, 640)
shape = SubResource("RectangleShape2D_j40s7")

[node name="lineButton" type="HBoxContainer" parent="line"]
offset_top = 608.0
offset_right = 1280.0
offset_bottom = 672.0

[node name="Line;" type="Sprite2D" parent="line/lineButton"]
position = Vector2(1088, 32)
texture = ExtResource("2_m0j1p")

[node name="LineA" type="Sprite2D" parent="line/lineButton"]
position = Vector2(192, 32)
texture = ExtResource("3_ajp00")

[node name="LineD" type="Sprite2D" parent="line/lineButton"]
position = Vector2(448, 32)
texture = ExtResource("4_amgvv")

[node name="LineF" type="Sprite2D" parent="line/lineButton"]
position = Vector2(576, 32)
texture = ExtResource("5_wjh4k")

[node name="LineJ" type="Sprite2D" parent="line/lineButton"]
position = Vector2(704, 32)
texture = ExtResource("6_u2av3")

[node name="LineK" type="Sprite2D" parent="line/lineButton"]
position = Vector2(832, 32)
texture = ExtResource("7_sawos")

[node name="LineL" type="Sprite2D" parent="line/lineButton"]
position = Vector2(960, 32)
texture = ExtResource("8_b4u7i")

[node name="LineS" type="Sprite2D" parent="line/lineButton"]
position = Vector2(320, 32)
texture = ExtResource("9_m613o")

[node name="exactLine" type="Area2D" parent="line"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="line/exactLine"]
position = Vector2(640, 712)
shape = SubResource("RectangleShape2D_8pjan")
debug_color = Color(0.791058, 0.428307, 0, 0.42)

[node name="lifeBar" type="TextureProgressBar" parent="."]
offset_left = 142.0
offset_top = 16.0
offset_right = 1142.0
offset_bottom = 66.0
value = 60.0
texture_under = ExtResource("10_3c7or")
texture_over = ExtResource("11_gad20")
texture_progress = ExtResource("12_fdv8e")

[node name="musicInfo" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0)

[node name="info" type="Label" parent="musicInfo"]
layout_mode = 0
offset_left = 142.0
offset_top = 66.0
offset_right = 242.0
offset_bottom = 101.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "音乐信息"

[node name="mode" type="Label" parent="musicInfo"]
layout_mode = 0
offset_left = 1040.0
offset_top = 66.0
offset_right = 1140.0
offset_bottom = 101.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
text = "正常模式"

[node name="stopGame" type="CenterContainer" parent="."]
process_mode = 3
visible = false
top_level = true
anchors_preset = -1
anchor_left = 0.181
anchor_top = 0.278
anchor_right = 0.825
anchor_bottom = 0.711
offset_left = -7.68001
offset_top = -8.16002
offset_bottom = 0.0799866
script = ExtResource("2_w6n62")
metadata/_edit_use_anchors_ = true

[node name="appearance" type="Sprite2D" parent="stopGame"]
position = Vector2(416, 192)
scale = Vector2(0.8, 0.8)
texture = ExtResource("14_7rxwv")

[node name="pressedText" type="Label" parent="stopGame/appearance"]
offset_left = -240.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "游戏暂停"

[node name="tip" type="Label" parent="stopGame/appearance"]
offset_left = -160.0
offset_top = 70.0
offset_right = 240.0
offset_bottom = 139.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "ESC继续 回车离开"

[node name="failed" type="AudioStreamPlayer" parent="stopGame"]
stream = ExtResource("6_el2xh")

[node name="success" type="AudioStreamPlayer" parent="stopGame"]
stream = ExtResource("7_4texb")

[node name="down" type="AudioStreamPlayer" parent="stopGame"]
stream = ExtResource("8_3mbfd")

[node name="intro" type="ColorRect" parent="."]
offset_left = 128.0
offset_top = 128.0
offset_right = 1152.0
offset_bottom = 192.0

[node name="countdown" type="Label" parent="intro"]
layout_mode = 0
offset_left = 328.0
offset_top = 40.0
offset_right = 690.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "准备......"
horizontal_alignment = 1
vertical_alignment = 1

[node name="readyToGo" type="AudioStreamPlayer" parent="intro"]
stream = ExtResource("18_q2gtr")

[node name="introAnimation" type="AnimationPlayer" parent="intro"]
libraries = {
"": SubResource("AnimationLibrary_8034l")
}
autoplay = "intro"

[node name="levelEnd" type="CanvasLayer" parent="."]
process_mode = 3

[node name="back" type="ColorRect" parent="levelEnd"]
offset_right = 1280.0
color = Color(0, 0, 0, 0)

[node name="levelEndAnimation" type="AnimationPlayer" parent="levelEnd"]
libraries = {
"": SubResource("AnimationLibrary_ev46n")
}

[node name="phoneButton" type="GridContainer" parent="."]
process_mode = 3
visible = false
offset_left = 1088.0
offset_top = 128.0
offset_right = 1221.0
offset_bottom = 187.0
columns = 5

[node name="Button_enter" type="Button" parent="phoneButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Enter"

[connection signal="finished" from="music" to="." method="_on_music_finished"]
[connection signal="animation_finished" from="role" to="." method="_on_role_animation_finished"]
[connection signal="body_entered" from="line" to="." method="_on_line_body_entered"]
[connection signal="body_exited" from="line" to="." method="_on_line_body_exited"]
[connection signal="body_entered" from="line/exactLine" to="." method="_on_exact_line_body_entered"]
[connection signal="hidden" from="stopGame" to="." method="_on_stop_game_hidden"]
[connection signal="visibility_changed" from="stopGame" to="." method="_on_stop_game_visibility_changed"]
[connection signal="finished" from="intro/readyToGo" to="." method="_on_ready_to_go_finished"]
[connection signal="animation_finished" from="levelEnd/levelEndAnimation" to="." method="_on_level_end_animation_animation_finished"]
[connection signal="button_down" from="phoneButton/Button_enter" to="." method="_on_button_enter_button_down"]
